# oaip_sem_2_lab_7

lab_7/: CMakeLists.txt  functions.cpp  generate.h  header.h  inputCheck.h  main.cpp
